--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ RADIO-usa.DAT
 Scratchpad.py
 mgs1-undub-docs/.obsidian
 mgs1-undub-docs/.trash
-__pycache__
-__pycache__/radioDict.cpython-312.pyc
+__pycache__/*
+
